--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <body bgcolor=#dbffbd>
-  <a href="Index.html">Torna alla homepage!</a>
+  <a href="index.html">Torna alla homepage!</a>
   </body>
 
   <head>
